# ResDEEDS

./: .dockerignore  .gitignore  .gitmodules  .pylintrc  1.4.0  AGENTS.md  Dockerfile  LICENSE.txt  Makefile  NOTICE.txt  README.md  compose.production.yml  compose.yml  config.json  docker-compose.dev.yaml  docker-compose.prod.yml  docker-compose.production.yml  docker-compose.yml  electron-builder.yml  electron.vite.config.ts  env.dist  eslint.config.js  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml  pnpm-workspace.yaml  pyvenv.cfg  requirements.txt  test-analyze-workflow.py  test-backend.py  tsconfig.json  vitest.config.ts
Dockerfiles/: Dockerfile.dev  Dockerfile.ubuntu
_old/: Dockerfile  Makefile
api/: .gitignore  Dockerfile  Dockerfile.dev  pyproject.toml  requirements-test.txt  requirements.txt
app/: entrypoint.local.sh  requirements.dev.txt  requirements.spine.txt  requirements.txt
config/: client_secrets.json  config.json  goals.csv  hazards.csv  impacts.csv  metrics.csv
deploy/: deploy.sh  main.py  pyproject.toml  requirements.txt
deploy/scripts/: deploy.sh
desktop/: TESTING.md  electron.vite.config.ts  eslint.config.js  package.json  pnpm-lock.yaml
install/: Dockerfile  Spine Toolbox.conf  install.sh  run.sh
src/backend/: __init__.py  __main__.py  app.py  app_minimal.py  build.py  database.py  hazard.py  impact.py  link.py  metric.py  project.py  pyproject.toml  resdeeds-backend.spec  start-backend.py  system.py  template.py
src/backend/hooks/: hook-pypsa.py  rthook_pypsa.py
src/backend/spine/: db.py  toolbox.py
(+367 files in other folders)
