[project]
name = "resdeeds-deploy"
version = "0.1.0"
description = "Deployment scripts for ResDEEDS"
requires-python = ">=3.12"
dependencies = [
    "click==8.1.7",
    "cryptography==44.0.1",
    "paramiko==3.5.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]