[project]
name = "resdeeds-backend"
version = "0.1.0"
description = "ResDEEDS Analysis Backend Service"
requires-python = ">=3.9"
dependencies = [
    "fastapi>=0.100.0",
    "uvicorn[standard]>=0.23.0",
    "pypsa>=0.20.0",
    "pandas>=2.0.0",
    "pydantic>=2.0.0",
    "pyinstaller>=6.15.0",
]

[tool.uv]
dev-dependencies = []
